--- a/Areas/algebra-En.html
+++ b/Areas/algebra-En.html
@@ -70,7 +70,7 @@
 						<h5 class="card-title" style="color: white">Inequalities</h5>
 						<p class="card-text" style="color: white;">An equality is an equivalence relation between two expressions, numerical or literal, that holds for some, some or all values and is represented by the sign =.
 							is satisfied for some, some or all values and is represented by the sign =.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Algebra/desigualdades-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -79,7 +79,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Successions</h5>
 						<p class="card-text" style="color: white">A sequence is a sequence of numbers or other mathematical objects related to each other, in which the relative position of each number with respect to the previous one is taken into account.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Algebra/sucesiones-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -88,7 +88,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Functions</h5>
 						<p class="card-text" style="color: white">One quantity is said to be a function of another if the value of the former depends on the value of the latter.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Algebra/funciones-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
@@ -97,7 +97,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Vectors</h5>
 						<p class="card-text" style="color: white">It is a mathematical entity like the line or the plane. A vector is represented by a line segment, oriented within the three-dimensional Euclidean space.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Algebra/vectores-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
@@ -106,7 +106,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Matrices</h5>
 						<p class="card-text" style="color: white">It is a two-dimensional set of numbers.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Algebra/matrices-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
