--- a/Areas/algebra.html
+++ b/Areas/algebra.html
@@ -70,7 +70,7 @@
 						<h5 class="card-title" style="color: white">Desigualdades</h5>
 						<p class="card-text" style="color: white;">Una igualdad es una relación de equivalencia entre dos expresiones, numéricas o literales, que se
 							cumple para algún, algunos o todos los valores y se representa por el signo =.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Algebra/desigualdades.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -79,7 +79,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Sucesiones</h5>
 						<p class="card-text" style="color: white">Una sucesión es una secuencia de números u otros objetos matemáticos relacionados entre sí, en la que se tiene en cuenta la posición relativa de cada número respecto del anterior.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Algebra/sucesiones.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -88,7 +88,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Funciones</h5>
 						<p class="card-text" style="color: white">Se dice que una magnitud es función de otra si el valor de la primera depende del valor de la segunda.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Algebra/funciones.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
@@ -97,7 +97,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Vectores</h5>
 						<p class="card-text" style="color: white">Es un ente matemático como la recta o el plano. Un vector se representa mediante un segmento de recta, orientado dentro del espacio euclidiano tridimensional.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Algebra/vectores.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
@@ -106,7 +106,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Matrices</h5>
 						<p class="card-text" style="color: white">Es un conjunto bidimensional de números.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Algebra/matrices.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
