--- a/Areas/aritmetica-En.html
+++ b/Areas/aritmetica-En.html
@@ -68,7 +68,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Addition and subtraction</h5>
 						<p class="card-text" style="color: white">Addition is also called addition. There are two parts to addition: the addends and the sum or total, which is the result. You can associate the addends in different ways to add and the sum or total will be the same.</p>
-						<a href="Aritmetica/sumasRestas.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Aritmetica/sumas-y-restas-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -77,7 +77,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Multiplication and division</h5>
 						<p class="card-text" style="color: white">Multiplication and division are closely related since division is the inverse of multiplication. In division we seek to separate into equal groups, while in multiplication we seek to unite or join into equal groups.</p>
-						<a href="Aritmetica/multiplicacionDivision.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Aritmetica/multiplicacion-y-division-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -86,7 +86,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Negative numbers</h5>
 						<p class="card-text" style="color: white">A negative number is any number whose value is less than zero and, therefore, less than the other positive numbers.</p>
-						<a href="Aritmetica/numerosNegativos.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Aritmetica/numeros-negativos-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
@@ -95,7 +95,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Fractions</h5>
 						<p class="card-text" style="color: white">Every fraction is a division and every division is a fraction. Because of that a division can be converted into a fraction to be simplified. Fractions can be represented as (a÷b) or (a/b) in a mathematical operation.</p>
-						<a href="Aritmetica/fracciones.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Aritmetica/fracciones-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
@@ -104,7 +104,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Decimals</h5>
 						<p class="card-text" style="color: white">Decimal numbers are values that represent numbers smaller than unity. Each decimal number has a whole number part and a decimal part, where the whole number part is to the left of the decimal point and the decimal part is to the right.</p>
-						<a href="Aritmetica/decimales.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Aritmetica/decimales-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
