--- a/Areas/calculo-En.html
+++ b/Areas/calculo-En.html
@@ -71,7 +71,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Limits and continuity</h5>
 						<p class="card-text" style="color: white">A limit is the touch key that formalizes the intuitive notion of approaching a particular point of a sequence or function, as the parameters of that sequence or function approach a certain value.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Calculo/limites-y-continuidad-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -80,7 +80,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Derivatives</h5>
 						<p class="card-text" style="color: white">The derivative of a function is the instantaneous rate of change with which the value of that mathematical function varies as the value of its independent variable changes.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Calculo/derivadas-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -89,7 +89,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Integration</h5>
 						<p class="card-text" style="color: white">Integration is a fundamental concept of calculus and mathematical analysis. Basically, an integral is a generalization of the sum of infinitely many, infinitesimally small summands: a continuous sum.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Calculo/integracion-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
@@ -98,7 +98,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Series</h5>
 						<p class="card-text" style="color: white">A series is the generalization of the notion of sum, applied to the infinite terms of a sequence.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Calculo/series-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
