--- a/Areas/estadistica-En.html
+++ b/Areas/estadistica-En.html
@@ -67,7 +67,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Measures of central tendency</h5>
 						<p class="card-text" style="color: white">Measures of central tendency are statistical measures that attempt to summarize a set of values into a single value.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Estadistica/medidas-de-tendencia-central-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -76,7 +76,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Arithmetic mean, mode and median</h5>
 						<p class="card-text" style="color: white">The arithmetic mean, also called average or simply mean, is obtained as the sum of a set of values divided by the total number of summands.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Estadistica/media-aritmetica-moda-y-mediana-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -85,7 +85,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Measures of dispersion</h5>
 						<p class="card-text" style="color: white">In statistics, measures of dispersion is the degree to which a distribution is stretched or compressed.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Estadistica/medidas-de-dispersion-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -94,7 +94,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Variance and standard deviation</h5>
 						<p class="card-text" style="color: white">The variance of a random variable is a measure of dispersion defined as the expectation of the square of the deviation of that variable from its mean.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Estadistica/varianza-y-desviacion-estandar-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
@@ -103,7 +103,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Probability</h5>
 						<p class="card-text" style="color: white">Probability is the likelihood that a phenomenon or event will occur, given certain circumstances. It is expressed as a percentage.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Estadistica/probabilidad-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
