--- a/Areas/estadistica.html
+++ b/Areas/estadistica.html
@@ -67,7 +67,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Medidas de tendencia central</h5>
 						<p class="card-text" style="color: white">Las medidas de tendencia central son medidas estadísticas que pretenden resumir en un solo valor a un conjunto de valores.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Estadistica/medidas-de-tendencia-central.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -76,7 +76,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Media aritmética, moda y mediana</h5>
 						<p class="card-text" style="color: white">La media aritmética, también llamada promedio o simplemente media, se obtiene como la suma de un conjunto de valores dividida entre el número total de sumandos.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Estadistica/media-aritmetica-moda-y-mediana.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -85,7 +85,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Medidas de dispersión</h5>
 						<p class="card-text" style="color: white">En estadística, las medidas de dispersión es el grado en que una distribución se estira o se comprime.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Estadistica/medidas-de-dispersion.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -94,7 +94,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Varianza y desviación estándar</h5>
 						<p class="card-text" style="color: white">La varianza de una variable aleatoria es una medida de dispersión definida como la esperanza del cuadrado de la desviación de dicha variable respecto a su media.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Estadistica/varianza-y-desviacion-estandar.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
@@ -103,7 +103,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Probabilidad</h5>
 						<p class="card-text" style="color: white">La probabilidad es la posibilidad de que suceda un fenómeno o un hecho, dadas determinadas circunstancias. Se expresa como un porcentaje.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Estadistica/probabilidad.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
