--- a/Areas/geometria.html
+++ b/Areas/geometria.html
@@ -73,7 +73,7 @@
 						<h5 class="card-title" style="color: white">Ángulos</h5>
 						<p class="card-text" style="color: white">La parte del plano determinada por dos semirrectas llamadas lados que tienen 
 							el mismo punto de origen llamado vértice del ángulo. La unidad de medida de los ángulos son los grados.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Geometria/angulos.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -82,7 +82,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Figuras</h5>
 						<p class="card-text" style="color: white">Es la representación visual y funcional de un conjunto no vacío y cerrado de puntos en un plano geométrico.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Geometria/figuras.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -91,7 +91,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Plano coordenado</h5>
 						<p class="card-text" style="color: white">Es un sistema para graficar y describir puntos y rectas.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Geometria/plano-coordenado.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
@@ -101,7 +101,7 @@
 						<h5 class="card-title" style="color: white">Área y perímetro</h5>
 						<p class="card-text" style="color: white">El área es la magnitud geométrica que expresa la extensión de un cuerpo en dos dimensiones: largo y ancho.
 							El perímetro es la suma de todos los lados.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Geometria/area-y-perimetro.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
@@ -110,7 +110,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Volumen y área de la superficie</h5>
 						<p class="card-text" style="color: white">El volumen es una magnitud métrica de tipo escalar definida como la extensión en tres dimensiones de una región del espacio.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Geometria/volumen-y-area-de-la-superficie.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
@@ -119,7 +119,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Teorema de Pitágoras</h5>
 						<p class="card-text" style="color: white">Es una relación fundamental en geometría euclidiana entre los tres lados de un triángulo rectángulo.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Geometria/teoremas-de-pitagoras.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
