--- a/Areas/trigonometria.html
+++ b/Areas/trigonometria.html
@@ -67,7 +67,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Triángulos rectángulos</h5>
 						<p class="card-text" style="color: white">Se denomina triángulo rectángulo a cualquier triángulo que tiene un ángulo recto, es decir, un ángulo de 90 grados.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Trigonometria/triangulos-rectangulos.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -76,7 +76,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Triángulos no rectángulos</h5>
 						<p class="card-text" style="color: white">Se denomina triángulo no rectángulo a cualquier triángulo que no sea rectángulo.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Trigonometria/triangulos-no-rectangulos.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -85,7 +85,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Funciones trigonométricas</h5>
 						<p class="card-text" style="color: white">Las funciones trigonométricas son las funciones determinadas con el objetivo de extender la definición de las razones trigonométricas a todos los números reales y complejos.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Trigonometria/funciones-trigonometricas.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -94,7 +94,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Identidades y ecuaciones trigonométricas</h5>
 						<p class="card-text" style="color: white">Son igualdades que involucran funciones trigonométricas y se verifican para cualquier valor permitido de la variable o variables que se consideren.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Trigonometria/identidades-y-ecuaciones-trigonometricas.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
