--- a/Areas/Algebra/desigualdades-En.html
+++ b/Areas/Algebra/desigualdades-En.html
@@ -3,17 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<link  rel="icon"   href="../../images/icono.png"/>
-		<link rel="stylesheet" href="../../resources/css/style-desigualdad-en.css">
+		<link rel="stylesheet" href="../../resources/css/style-desigualdad.css">
 		<script src="../../resources/js/index.js"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-		<title>Math</title>
+		<title>Mathematics</title>
 	</head>
 
 	<body id="body" class="">
 		<div id="content" class="mt-4">
 			<header id="header" class="bg-dark">
 				<p/>
-				<h1 class="text-center">MATH</h1>
+				<h1 class="text-center">MATHEMATICS</h1>
 			</header>
 			
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nav-main">
@@ -21,25 +21,25 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 				  <ul class="navbar-nav">
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="../index.html">beginning</a>
+					  <a class="nav-link active" aria-current="page" href="../../index-En.html">Home</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="aritmetica.html">arithmetic</a>
+					  <a class="nav-link active" aria-current="page" href="../aritmetica-En.html">Arithmetic</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="algebra.html">Álgebra</a>
+					  <a class="nav-link active" aria-current="page" href="../algebra-En.html">Algebra</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="geometria.html">geometry</a>
+					  <a class="nav-link active" aria-current="page" href="../geometria-En.html">Geometry</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="calculo.html">calculation</a>
+					  <a class="nav-link active" aria-current="page" href="../calculo-En.html">Calculation</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="estadistica.html">statistics</a>
+					  <a class="nav-link active" aria-current="page" href="../estadistica-En.html">Statistics</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="trigonometria.html">Trigonometry</a>
+					  <a class="nav-link active" aria-current="page" href="../trigonometria-En.html">Trigonometry</a>
 					</li>
 				  </ul>
 				</div>
@@ -54,13 +54,13 @@
 			</a>
 
 			<section id="section">
-				<h2>inequalities</h2>
+				<h2>Inequalities</h2>
 				<p>
 					<br>The mathematical inequality is that proposition that relates two algebraic expressions whose values ​​are different. It is a proposition of relationship between two different elements, either by greater, lesser, greater or equal inequality, or less or equal. Each of the different types of inequality must be expressed with a different sign (> or <, etc.) and will have a different reaction to mathematical operations depending on its nature.
                     <br>Therefore, if we want to explain what the purpose of this concept is with the least possible number of words, we will say that; The goal of mathematical inequality is to show that two mathematical subjects express different values.
 
 				</p>
-				<h1>History</h1>
+				<h2>History</h2>
                 <p>
                     <br>According to Halmaghi (2012) in the first mathematical records provided by the
                     history, the inequalities had only an instrumental character, and when the
@@ -74,7 +74,7 @@
                     mathematics: calculus, statistics, numerical analysis, game theory,
                     etc.
                 </p>
-                <h1>Signs of Inequality</h1>
+                <h2>Signs of Inequality</h2>
                 <br>unequal to:<b>≠</b>
                 <br>Smaller than: <b>(<)</b>
                 <br>less than or equal to: <b>≤</b>
@@ -108,16 +108,16 @@
                 
 			</section>
 			
-			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 1005px; left: 12px;" aria-label="breadcrumb">
+			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 1475px; left: 12px;" aria-label="breadcrumb">
 			  <ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="../../index.html">Beginning</a></li>
+				<li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
                 <li class="breadcrumb-item"><a href="../algebra-En.html"></a>Algebra</li>
-				<li class="breadcrumb-item active" aria-current="page">inequality</li>
+				<li class="breadcrumb-item active" aria-current="page">Inequality</li>
 			  </ol>
 			</nav>
 
-			<img src="../images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
-			<img src="../images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
+			<img src="../../images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
+			<img src="../../images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
 			<div id="footer0" class="bg-dark"/>
 			<div id="footer1" class="bg-dark"/>
 			<div id="footer2" class="bg-dark"/>
