--- a/Areas/Algebra/desigualdades.html
+++ b/Areas/Algebra/desigualdades.html
@@ -21,35 +21,35 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 				  <ul class="navbar-nav">
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+					  <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="aritmetica.html">Aritmética</a>
+					  <a class="nav-link active" aria-current="page" href="../aritmetica.html">Aritmética</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="algebra.html">Álgebra</a>
+					  <a class="nav-link active" aria-current="page" href="../algebra.html">Álgebra</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="geometria.html">Geometría</a>
+					  <a class="nav-link active" aria-current="page" href="../geometria.html">Geometría</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="calculo.html">Cálculo</a>
+					  <a class="nav-link active" aria-current="page" href="../calculo.html">Cálculo</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="estadistica.html">Estadística</a>
+					  <a class="nav-link active" aria-current="page" href="../estadistica.html">Estadística</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="trigonometria.html">Trigonometría</a>
+					  <a class="nav-link active" aria-current="page" href="../trigonometria.html">Trigonometría</a>
 					</li>
 				  </ul>
 				</div>
 			  </div>
 			</nav>
 			
-			<a href="aritmetica.html" id="spanish">
+			<a href="desigualdades.html" id="spanish">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/es_co.gif" alt="Español" title="Español" />					
 			</a>
-			<a href="aritmetica-En.html" id="english">
+			<a href="desigualdades-En.html" id="english">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/en_us.gif" alt="English" title="English" />					
 			</a>
 
@@ -60,7 +60,7 @@
                     <br>Por lo tanto, si queremos explicar cuál es la finalidad de este concepto con el menor número de palabras posibles diremos que; el objetivo de la desigualdad matemática es mostrar que dos sujetos matemáticos expresan valores diferentes.
 
 				</p>
-				<h1>Historia</h1>
+				<h2>Historia</h2>
                 <p>
                     <br>Según Halmaghi (2012) en los primeros registros matemáticos que brinda la
                     historia, las desigualdades tenían sólo un carácter instrumental, y cuando las
@@ -74,7 +74,7 @@
                     matemática: el cálculo, la estadística, el análisis numérico, la teoría de juegos,
                     etcétera.
                 </p>
-                <h1>Signos de la Desigualdad</h1>
+                <h2>Signos de la Desigualdad</h2>
                 <br>Desigual a:<b>≠</b>
                 <br>Menor que: <b>(<)</b>
                 <br>Menor o igual que: <b>≤</b>
@@ -89,8 +89,8 @@
                 </p>
                 <p>
                     <h4>Tipos de Desigualdad</h4>
-                    <br><b>Desigualdades estrictas:</b>Son aquellas que no aceptan la igualdad entre elementos. De este modo, entenderemos como desigualdades de este tipo el “mayor que” (>) o “menor que” (<).
-                    <br><b>Desigualdades amplias o no estrictas:</b>Todas aquellas en las que no se especifica si uno de los elementos es mayor/menor o igual. Por lo tanto, estamos hablando de “menor o igual que” (≤), o bien “mayor o igual que” (≥).
+                    <br><b>Desigualdades estrictas:</b> Son aquellas que no aceptan la igualdad entre elementos. De este modo, entenderemos como desigualdades de este tipo el “mayor que” (>) o “menor que” (<).
+                    <br><b>Desigualdades amplias o no estrictas:</b> Todas aquellas en las que no se especifica si uno de los elementos es mayor/menor o igual. Por lo tanto, estamos hablando de “menor o igual que” (≤), o bien “mayor o igual que” (≥).
                 </p>
                 <p>
                     <h4>Propiedades de la Desigualdad</h4>
@@ -108,16 +108,16 @@
                 
 			</section>
 			
-			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 1005px; left: 12px;" aria-label="breadcrumb">
+			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 1405px; left: 12px;" aria-label="breadcrumb">
 			  <ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="../../index.html">Inicio</a></li>
                 <li class="breadcrumb-item"><a href="../algebra.html">Algebra</a></li>
-				<li class="breadcrumb-item active" aria-current="page">Desigualdad</li>
+				<li class="breadcrumb-item active" aria-current="page">Desigualdades</li>
 			  </ol>
 			</nav>
 
-			<img src="../images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
-			<img src="../images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
+			<img src="../../images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
+			<img src="../../images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
 			<div id="footer0" class="bg-dark"/>
 			<div id="footer1" class="bg-dark"/>
 			<div id="footer2" class="bg-dark"/>
