--- a/Areas/Aritmetica/sumas-y-restas.html
+++ b/Areas/Aritmetica/sumas-y-restas.html
@@ -21,35 +21,35 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 				  <ul class="navbar-nav">
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+					  <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="aritmetica.html">Aritmética</a>
+					  <a class="nav-link active" aria-current="page" href="../aritmetica.html">Aritmética</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="algebra.html">Álgebra</a>
+					  <a class="nav-link active" aria-current="page" href="../algebra.html">Álgebra</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="geometria.html">Geometría</a>
+					  <a class="nav-link active" aria-current="page" href="../geometria.html">Geometría</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="calculo.html">Cálculo</a>
+					  <a class="nav-link active" aria-current="page" href="../calculo.html">Cálculo</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="estadistica.html">Estadística</a>
+					  <a class="nav-link active" aria-current="page" href="../estadistica.html">Estadística</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="trigonometria.html">Trigonometría</a>
+					  <a class="nav-link active" aria-current="page" href="../trigonometria.html">Trigonometría</a>
 					</li>
 				  </ul>
 				</div>
 			  </div>
 			</nav>
 			
-			<a href="aritmetica.html" id="spanish">
+			<a href="sumas-y-restas.html" id="spanish">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/es_co.gif" alt="Español" title="Español" />					
 			</a>
-			<a href="aritmetica-En.html" id="english">
+			<a href="sumas-y-restas-En.html" id="english">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/en_us.gif" alt="English" title="English" />					
 			</a>
 
@@ -65,7 +65,7 @@
                     diferencia, el primer número se denomina minuendo y el segundo es el
                     sustraendo, generando la diferencia.
 				</p>
-				<h1>Historia</h1>
+				<h2>Historia</h2>
                 <p>
                     <h4>Sumas</h4>
                     <br>La suma es una de las operaciones matemáticas más antiguas y básicas que se conocen. 
@@ -130,7 +130,7 @@
                 
 			</section>
 			
-			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 1005px; left: 12px;" aria-label="breadcrumb">
+			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 1475px; left: 12px;" aria-label="breadcrumb">
 			  <ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="../../index.html">Inicio</a></li>
                 <li class="breadcrumb-item"><a href="../aritmetica.html">Aritmetica</a></li>
@@ -138,8 +138,8 @@
 			  </ol>
 			</nav>
 
-			<img src="../images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
-			<img src="../images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
+			<img src="../../images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
+			<img src="../../images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
 			<div id="footer0" class="bg-dark"/>
 			<div id="footer1" class="bg-dark"/>
 			<div id="footer2" class="bg-dark"/>
