--- a/Areas/calculo.html
+++ b/Areas/calculo.html
@@ -71,7 +71,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Límites y continuidad</h5>
 						<p class="card-text" style="color: white">Un límite es la clave de toque que formaliza la noción intuitiva de aproximación hacia un punto concreto de una sucesión o una función, a medida que los parámetros de esa sucesión o función se acercan a un determinado valor.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Calculo/limites-y-continuidad.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -80,7 +80,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Derivadas</h5>
 						<p class="card-text" style="color: white">La derivada de una función es la razón de cambio instantánea con la que varía el valor de dicha función matemática, según se modifique el valor de su variable independiente.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Calculo/derivadas.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -89,7 +89,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Integración</h5>
 						<p class="card-text" style="color: white">La integración es un concepto fundamental del cálculo y del análisis matemático. Básicamente, una integral es una generalización de la suma de infinitos sumandos, infinitesimalmente pequeños: una suma continua.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Calculo/integracion.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
@@ -98,7 +98,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Series</h5>
 						<p class="card-text" style="color: white">Una serie es la generalización de la noción de suma, aplicada a los infinitos términos de una sucesión.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Calculo/series.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
