--- a/Areas/geometria-En.html
+++ b/Areas/geometria-En.html
@@ -72,7 +72,7 @@
 						<h5 class="card-title" style="color: white">Angles</h5>
 						<p class="card-text" style="color: white">The part of the plane determined by two straight lines called sides that have the same origin point called the vertex of the angle. 
 							the same point of origin called the vertex of the angle. The unit of measure for angles is degrees.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Geometria/angulos-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -81,7 +81,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Figures</h5>
 						<p class="card-text" style="color: white">It is the visual and functional representation of a non-empty and closed set of points in a geometric plane.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Geometria/figuras-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -90,7 +90,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Coordinate plane</h5>
 						<p class="card-text" style="color: white">It is a system for graphing and describing points and lines.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Geometria/plano-coordenado-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
@@ -100,7 +100,7 @@
 						<h5 class="card-title" style="color: white">Area and perimeter</h5>
 						<p class="card-text" style="color: white">The area is the geometric magnitude that expresses the extension of a body in two dimensions: length and width.
 							The perimeter is the sum of all the sides.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Geometria/area-y-perimetro-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
@@ -109,7 +109,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Volume and surface area</h5>
 						<p class="card-text" style="color: white">Volume is a scalar metric quantity defined as the three-dimensional extent of a region of space.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Geometria/volumen-y-area-de-la-superficie-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
@@ -118,7 +118,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Pythagorean Theorem</h5>
 						<p class="card-text" style="color: white">It is a fundamental relationship in Euclidean geometry between the three sides of a right triangle.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Geometria/teoremas-de-pitagoras-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
