--- a/Areas/trigonometria-En.html
+++ b/Areas/trigonometria-En.html
@@ -67,7 +67,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Rectangular triangles</h5>
 						<p class="card-text" style="color: white">A right triangle is any triangle that has a right angle, that is, an angle of 90 degrees.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Trigonometria/triangulos-rectangulos-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -76,7 +76,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Non-right triangles</h5>
 						<p class="card-text" style="color: white">Any triangle that is not a right triangle is called a non-right triangle.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Trigonometria/triangulos-no-rectangulos-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -85,7 +85,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Trigonometric functions</h5>
 						<p class="card-text" style="color: white">Trigonometric functions are functions determined with the objective of extending the definition of trigonometric ratios to all real and complex numbers.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Trigonometria/funciones-trigonometricas-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -94,7 +94,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Trigonometric identities and equations</h5>
 						<p class="card-text" style="color: white">These are equalities involving trigonometric functions and are verified for any allowed value of the variable or variables under consideration.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+						<a href="Trigonometria/identidades-y-ecuaciones-trigonometricas-En.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
